---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unexpected token
  ╭▸ policies6:1:1
  │
1 │ ┏ 3(principal: p, action: a, resource: r)
2 │ ┃ when { w }
3 │ ┃ unless { u }
4 │ ┃ advice { "doit" };
  ╰╴┗━━━━━━━━━━━━━━━━━━┛
error: expected `;`
  ╭▸ policies6:9:1
  │
9 │ advice { "doit" };
  ╰╴━━━━━━
error: unexpected token
  ╭▸ policies6:9:1
  │
9 │ advice { "doit" };
  ╰╴━━━━━━━━━━━━━━━━━━
error: expected `;`
   ╭▸ policies6:14:1
   │
14 │ advice { "doit" };
   ╰╴━━━━━━
error: unexpected token
   ╭▸ policies6:14:1
   │
14 │ advice { "doit" };
   ╰╴━━━━━━━━━━━━━━━━━━
error: unknown variable `w`
  ╭▸ policies6:7:8
  │
7 │ when { w }
  │        ━━
  ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unknown variable `u`
  ╭▸ policies6:8:10
  │
8 │ unless { u }
  │          ━━
  ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unknown variable `w`
   ╭▸ policies6:12:8
   │
12 │ when { w }
   │        ━━
   ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: unknown variable `u`
   ╭▸ policies6:13:10
   │
13 │ unless { u }
   │          ━━
   ╰╴
note: `principal`, `action`, `resource`, and `context` are the only variables
error: missing policy effect
   ╭▸ policies6:14:1
   │
14 │ advice { "doit" };
   ╰╴━━━━━━━━━━━━━━━━━━ expected `permit` or `forbid`
